Separate theme and add documentation

--- a/OOPod_Closure/walmart/index.html
+++ b/OOPod_Closure/walmart/index.html
@@ -7,7 +7,7 @@
 <style>
     .pod {
         border: 1px solid #000;
-        width: 100px;
+        width: 200px;
     }
     .coupon {
         background-color: #76C4F5;
@@ -44,11 +44,13 @@
     jQuery.noConflict();
     var APP_COUPONSINC = {};
 </script>
+<!-- include the file from the correct directory to get the correct class -->
 <script src="../classHelper.js"></script>
 <script src="../pod.js"></script>
 <script src="../pod_printable.js"></script>
 <script src="pod_printable.js"></script>
 <script src="../pod_cpc.js"></script>
+<script src="pod_cpc.js"></script>
 <script src="../gallery.js"></script>
 
 <script>
