--- a/OOPod_Closure/bigblue/index.html
+++ b/OOPod_Closure/bigblue/index.html
@@ -26,13 +26,13 @@
     <div class="mod-gallery">
         <div class="pods">
             <div class="pod coupon" data-podid="100">
-                <p>Type: <span class="pod-type">0</span></p>
-                <p>ID: <span class="pod-id">100</span></p>
+                <p>Base Type: <span class="pod-type">0</span></p>
+                <p>Base ID: <span class="pod-id">100</span></p>
             </div>
 
             <div class="pod cpc" data-podid="101">
-                <p>Type: <span class="pod-type">15</span></p>
-                <p>ID: <span class="pod-id">101</span></p>
+                <p>Base Type: <span class="pod-type">15</span></p>
+                <p>Base ID: <span class="pod-id">101</span></p>
             </div>
         </div>
     </div>
@@ -44,11 +44,13 @@
     jQuery.noConflict();
     var APP_COUPONSINC = {};
 </script>
-<script src="classHelper.js"></script>
-<script src="pod.js"></script>
+<script src="../classHelper.js"></script>
+<script src="../pod.js"></script>
+<script src="../pod_printable.js"></script>
 <script src="pod_printable.js"></script>
+<script src="../pod_cpc.js"></script>
 <script src="pod_cpc.js"></script>
-<script src="gallery.js"></script>
+<script src="../gallery.js"></script>
 
 <script>
     APP_COUPONSINC.contextData = {
