Forgot one file from last commit

--- a/OOPod_Closure/bigblue/index.html
+++ b/OOPod_Closure/bigblue/index.html
@@ -44,6 +44,7 @@
     jQuery.noConflict();
     var APP_COUPONSINC = {};
 </script>
+<!-- include the file from the correct directory to get the correct class -->
 <script src="../classHelper.js"></script>
 <script src="../pod.js"></script>
 <script src="../pod_printable.js"></script>
