Correct inheritance chain

--- a/OOPod_Closure/bigblue/index.html
+++ b/OOPod_Closure/bigblue/index.html
@@ -26,13 +26,13 @@
     <div class="mod-gallery">
         <div class="pods">
             <div class="pod coupon" data-podid="100">
-                <p>Base Type: <span class="pod-type">0</span></p>
-                <p>Base ID: <span class="pod-id">100</span></p>
+                <p>BigBlue Type: <span class="pod-type">0</span></p>
+                <p>BigBlue ID: <span class="pod-id">100</span></p>
             </div>
 
             <div class="pod cpc" data-podid="101">
-                <p>Base Type: <span class="pod-type">15</span></p>
-                <p>Base ID: <span class="pod-id">101</span></p>
+                <p>BigBlue Type: <span class="pod-type">15</span></p>
+                <p>BigBlue ID: <span class="pod-id">101</span></p>
             </div>
         </div>
     </div>
