--- a/gmap3/index.html
+++ b/gmap3/index.html
@@ -1,22 +1,59 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Gmap 3</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<head>
+<title>Test: Gmap3</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style>
+#my_map{
+ height: 200px;
+ width: 200px;
+}
+</style>
+</head>
 
-<script src='http://maps.google.com/maps/api/js?sensor=false' type='text/javascript'></script>
+<body>
+    <div id="my_map"></div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&client=gme-couponsinc&sensor=true"></script>
+<!--script src="gmap3.js"></script-->
+<script src="jquery.gmap3.js"></script>
+
 <script type='text/javascript'>
-  $(document).ready(function() {
-    $('#map-container').googleMap("3333 RiverBend Drive, Springfield, OR");
-  });
+$(document).ready(function() {
+    function getScript(src) {
+        document.write('<' + 'script src="' + src + '"' + ' type="text/javascript"><' + '/script>');
+    }
+
+    function initMap() {
+
+        $("#my_map").gmap3({
+            map:{
+                options:{
+                    center:[37.5591519,-121.9573035],
+                    zoom: 20/*,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP,
+                    mapTypeControl: true,
+                    mapTypeControlOptions: {
+                        style: google.maps.MapTypeControlStyle.DEFAULT
+                    },
+                    navigationControl: true,
+                    scrollwheel: true,
+                    streetViewControl: true*/
+                }
+            },
+            marker:{
+                latLng:[37.5591519,-121.9573035]
+            }
+        });
+    }
+
+    //getScript("http://maps.googleapis.com/maps/api/js?v=3&client=gme-couponsinc&sensor=true");
+    //getScript("jquery.gmap3.js");
+    initMap();
+
+});
 </script>
 
+</body>
 </html>
